# CSS-HNCA

./: .gitignore  README.md  branch-comparison-report.md  main.py  makefile  pyproject.toml  requirements.txt  sweeppare.md
.claude/: settings.local.json
config/: default.toml
docs/: AI-strategy.md  architecture.md  configuration.md  css-theory.md  introduction.md  methods.md  results.md  usage.md
examples/: README.md  basic_simulation.py
memory/: commits.md  plan.md  queries.md  tests.md
output/: README.md  avalanches.csv  forgetting_rate_sweep.csv  learning_forgetting_sweep_heatmap.csv  learning_forgetting_sweep_miao.csv  profile.stats  soc_sweep_results.csv  sweep_config_000.csv  sweep_config_002.csv  sweep_config_003.csv  sweep_config_004.csv  sweep_config_006.csv  sweep_config_008.csv  sweep_config_010.csv  sweep_config_012.csv  sweep_config_014.csv  sweep_config_016.csv  sweep_config_018.csv  sweep_config_020.csv  sweep_config_022.csv  sweep_config_024.csv  sweep_config_026.csv  sweep_config_028.csv  sweep_config_029.csv  sweep_config_030.csv  sweep_config_032.csv  sweep_config_034.csv  sweep_config_035.csv  sweep_config_036.csv  sweep_config_038.csv  sweep_config_040.csv  sweep_config_041.csv  sweep_config_042.csv  sweep_config_044.csv  sweep_config_046.csv  sweep_config_048.csv  sweep_config_050.csv  sweep_config_052.csv
output_snellius/: slurm-sweep-18777853_0.out  slurm-sweep-18777853_1.out  slurm-sweep-18777853_10.out  slurm-sweep-18777853_11.out  slurm-sweep-18777853_12.out  slurm-sweep-18777853_13.out  slurm-sweep-18777853_14.out  (+47 more)
(+84 files in other folders)
