[project]
name = "css-hnca"
version = "0.1.0"
description = "Neural Cellular Automata with Hebbian Learning and STDP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.100.0",
]
gpu = [
    "jax>=0.4.34",
    "jaxlib>=0.4.34",
    "jax-metal>=0.1.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/visualization/pygame_view.py",
    "src/visualization/matplotlib_view.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 80
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
